--- a/layouts/partials/animated-hero.html
+++ b/layouts/partials/animated-hero.html
@@ -305,7 +305,10 @@
       --label-width: 130px;
     }
 
-    .h-seg .title { display: none; }
+    .h-seg .title {
+      font-size: 0.5rem;
+      opacity: 0.7;
+    }
     .col-label .title { font-size: 0.55rem; }
   }
 
@@ -322,7 +325,10 @@
     }
 
     .h-seg .num, .col-label .num { font-size: 0.9rem; }
-    .col-label .title { display: none; }
+    .col-label .title {
+      font-size: 0.45rem;
+      opacity: 0.65;
+    }
   }
 </style>
 
